# Acceleration-of-the-Attention-Mechanism-on-Ryzen-AI-using-MLIR-AOHW25_1031-

./: LICENSE  README.md
src/Decoder/Cross Attention/: CmakeLists.txt  Makefile  matmul.py.txt  test.cpp
src/Decoder/Full Decoder Pipeline/: CMakeLists.txt  Makefile.txt  matmul.py  test.cpp.txt
src/Decoder/Masked SDPA/: CMakeLists.txt  Makefile  test.cpp  test.cpp.txt
src/Encoder/FFN/: CmakeLists.txt  Makefile  test.cpp  test.cpp.txt
src/Encoder/Full Encoder Pipeline/: CMakeLists.txt  CMakeLists.txt.txt  Makefile  test.cpp
src/Encoder/QKV Projection/Parallel/: CMakeLists.txt.txt  Makefile  Makefile.txt  test.cpp  test.cpp.txt
src/Encoder/QKV Projection/Sequential/: CMakeLists.txt  Makefile  Makefile.txt  common.h.txt  test.cpp
src/Encoder/SDPA/: CMakeLists.txt  CMakeLists.txt.txt  Makefile  common.h
